<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GetStartedScreenActivity">

        <ImageView
            android:id="@+id/getStartedBackgroundTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="-106dp"
            android:layout_marginEnd="-63dp"
            android:layout_marginBottom="572dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_get_started_screen_background"
            android:contentDescription="@string/top_circle_background_images" />

        <ImageView
            android:id="@+id/getStartedBackgroundBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="214dp"
            android:layout_marginTop="147dp"
            android:layout_marginEnd="-246dp"
            android:layout_marginBottom="319dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_get_started_screen_background"
            android:contentDescription="@string/bottom_circle_background_images"/>

        <ImageView
            android:id="@+id/getStartedProfileBottom"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="283dp"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="478dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.492"
            app:srcCompat="@drawable/get_started_profile_image_bottom"
            android:contentDescription="@string/bottom_profile_background_images"/>

        <ImageView
            android:id="@+id/getStartedProfileTop"
            android:layout_width="103dp"
            android:layout_height="103dp"
            android:layout_marginStart="249dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/getStartedProfileBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/get_started_screen_profile_top"
            android:contentDescription="@string/top_profile_background_images"/>

        <TextView
            android:id="@+id/getStartedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="165dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical|bottom"
            android:lineHeight="75sp"
            android:text="@string/let_s_get_started"
            android:textColor="@color/black"
            android:textFontWeight="800"
            android:textSize="75sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/growTogetherText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="46dp"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal|bottom"
            android:lineHeight="24sp"
            android:text="@string/grow_together"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/joinNowButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getStartedText" />

        <Button
            android:id="@+id/joinNowButton"
            style="@style/BaseButtonStyle"
            android:text="@string/join_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>