<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PasswordResetActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="83dp"
            android:layout_marginEnd="-90dp"
            android:layout_marginBottom="336dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_password_renew_screen_background"
            android:contentDescription="@string/background_image" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="93dp"
            android:layout_marginTop="336dp"
            android:layout_marginEnd="125dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_password_renew_screen_background"
            android:contentDescription="@string/background_image" />

        <TextView
            android:id="@+id/passwordTitleText"
            style="@style/HeaderTitleTextStyle"
            android:layout_marginStart="198dp"
            android:text="@string/your_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/EditTextStyle"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameText"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/usernameText"
            style="@style/EditTextUpperTextStyle"
            android:layout_marginTop="45dp"
            android:text="@string/emailText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTitleText" />

        <Button
            android:id="@+id/renewPasswordButton"
            style="@style/BaseButtonStyle"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/inter"
            android:text="@string/renew_password"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
            app:layout_constraintVertical_bias="0.028" />

        <ImageButton
            android:id="@+id/backScreenButton"
            style="@style/backScreenButton"
            android:contentDescription="@string/back_screen_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>